use formatted method instead of String.format()